# breathmetrics-py

./: .gitignore  README.md  breathmetrics-py.yml  environment.yml  pyproject.toml
docs/: dev_notes.md
src/breathmetrics/: __init__.py  breath_editor.py  breathmetrics_gui.py  cli.py  core.py  kernel.py  kernel_onset_detection_methods.py  kernel_plot.py  kernel_primary.py  kernel_secondary.py  utils.py
tests/: class_test_qy.py  editor_test_qy.py  function_test_nb_qy.ipynb  kernel_test_qy.py  plot_test.py  plot_test_qy.py  test_cli_smoke.py  test_smoke.py
